@@ -12,5 +12,5 @@
 include "header.php";
 
 define("XOOPS_FCK_FOLDER", $xoopsModule->getVar("dirname"));
-include XOOPS_ROOT_PATH."/class/xoopseditor/FCKeditor/editor/filemanager/browser/default/connectors/php/connector.php";
+include XOOPS_ROOT_PATH."/editors/FCKeditor/editor/filemanager/browser/default/connectors/php/connector.php";
 ?>
